edit and cleaned Notebooks

--- a/notebooks/02_eodag_des_post.ipynb
+++ b/notebooks/02_eodag_des_post.ipynb
@@ -13,13 +13,15 @@
     "import numpy as np\n",
     "import datetime as dt\n",
     "\n",
-    "from eodag import EODataAccessGateway\n",
+    "from eodag import EODataAccessGateway, SearchResult\n",
     "from eodag import setup_logging\n",
     "\n",
     "from rasterio.crs import CRS\n",
     "\n",
     "import eotools.shortcut as eoshort\n",
     "import eotools.loading as eoload\n",
+    "import cmcrameri as cmc\n",
+    "\n",
     "\n",
     "# Setup Verbose Values:\n",
     "# 0: no logging and no progress bar\n",
@@ -122,16 +124,7 @@
     "# Set Boundingbox for Area inside the Tile.\n",
     "latmin, latmax = 48.1, 48.35\n",
     "lonmin, lonmax = 16.1, 16.6\n",
-    "extent = {'lonmin': lonmin, 'latmin': latmin, 'lonmax': lonmax, 'latmax': latmax}\n",
-    "\n",
-    "# Folium Map\n",
-    "fmap = folium.Map(location=(np.array([latmin, latmax]).mean(), np.array([lonmin, lonmax]).mean()), zoom_start=9, tiles='OpenStreetMap')\n",
-    "folium.Rectangle(bounds=[[latmin, lonmin],[latmax, lonmax]], color=\"red\").add_to(fmap)\n",
-    "folium.GeoJson(\n",
-    "    data=deserialized_search_results[:],  # SearchResult has a __geo_interface__ interface used by folium to get its GeoJSON representation, single results dont work (this [2:3] instead of [2])\n",
-    "    tooltip=folium.GeoJsonTooltip(fields=[\"title\"])\n",
-    ").add_to(fmap)\n",
-    "fmap"
+    "extent = {'lonmin': lonmin, 'latmin': latmin, 'lonmax': lonmax, 'latmax': latmax}"
    ]
   },
   {
@@ -143,7 +136,7 @@
     "# Setting common Parameters for all further image processing\n",
     "common_params = dict(\n",
     "    crs=CRS.from_epsg(4326),               # the downloaded images are in 4326, don't reproject them\n",
-    "    resolution=0.0001,                     # but lower their resolution (0.0006 should be 60m in 100km)\n",
+    "    resolution=0.0006,                     # but lower their resolution (0.0006 should be 60m in 100km)\n",
     "    extent=(lonmin,latmin,lonmax,latmax)   # and zoom over/crop the area of interest\n",
     ")\n",
     "\n",
@@ -177,12 +170,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load Bands 4 and 8 into memory\n",
-    "def band_regex(band, res=60):\n",
-    "    return rf'^(?!.*MSK).*{band}_(60|20<10)m.*$'\n",
+    "# Load Bands 4 and 8 into an xarray DataArray\n",
     "\n",
-    "RED = products[0].get_data(band=band_regex('B04', res=10), **common_params)\n",
-    "NIR = products[0].get_data(band=band_regex('B08', res=10), **common_params)\n",
+    "# Using the new method for loading Bands, which uses regex not find mask data\n",
+    "RED = eoload.get_data_regex(product=products[0], band='B04', **common_params)\n",
+    "NIR = eoload.get_data_regex(product=products[0], band='B08', **common_params)\n",
+    "\n",
+    "# Original method for loading Bands\n",
+    "# RED = products[0].get_data(band='B04', **common_params)\n",
+    "# NIR = products[0].get_data(band='B08', **common_params)\n",
     "\n",
     "NDVI = normalized_difference(NIR, RED)"
    ]
@@ -286,15 +282,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "bands_2_load = load_assets(paths[0], res=60, only_spectral=True, include_tci=False)\n",
-    "\n",
-    "ds = eoload.load_multiple_timestamps_regex(products=products, bands=bands_2_load)\n",
-    "ds"
+    "These functions are implemented in the `eoload` module and can be accessed the following way:"
    ]
   },
   {
@@ -302,7 +293,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Load assets/bands of a given product\n",
+    "bands_2_load = load_assets(paths[0], res=10, only_spectral=True, include_tci=False)\n",
+    "\n",
+    "tile = SearchResult([p for p in products if p.properties['id'].split('_')[5] == 'T33UWP'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load multiple products with multiple bands into a single xarray Dataset\n",
+    "ds = eoload.load_multiple_timestamps_regex(products=tile, bands=bands_2_load, **common_params)\n",
+    "ds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use the ``xarray Dataset`` to process the data."
+   ]
   }
  ],
  "metadata": {
