--- a/notebooks/03_eodag_img_pro.ipynb
+++ b/notebooks/03_eodag_img_pro.ipynb
@@ -7,13 +7,8 @@
    "outputs": [],
    "source": [
     "# Imports \n",
-    "import os\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.image as mpimg\n",
     "import xarray as xr\n",
-    "import folium\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
     "import datetime as dt\n",
     "\n",
     "from eodag import EODataAccessGateway\n",
@@ -63,7 +58,7 @@
     "dag = EODataAccessGateway()\n",
     "dag.set_preferred_provider(\"cop_dataspace\")\n",
     "\n",
-    "deserialized_search_results = eoshort.deserialize(filepath=\"search_results.geojson\", workspace=workspace, dag=dag, log=True)\n",
+    "deserialized_search_results = eoshort.deserialize(filename=\"search_results.geojson\", workspace=workspace, dag=dag, log=True)\n",
     "\n",
     "# Download multiple Products\n",
     "products = deserialized_search_results\n",
@@ -79,15 +74,8 @@
     "# Set Boundingbox for Area inside the Tile.\n",
     "latmin, latmax = 48.1, 48.35\n",
     "lonmin, lonmax = 16.1, 16.6\n",
-    "extent = {'lonmin': lonmin, 'latmin': latmin, 'lonmax': lonmax, 'latmax': latmax}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "extent = {'lonmin': lonmin, 'latmin': latmin, 'lonmax': lonmax, 'latmax': latmax}\n",
+    "\n",
     "# Setting common Parameters for all further image processing\n",
     "common_params = dict(\n",
     "    crs=CRS.from_epsg(4326),               # the downloaded images are in 4326, don't reproject them\n",
@@ -100,8 +88,7 @@
     "    return (a - b*1.)/(a + b)\n",
     "\n",
     "def normalize(a):\n",
-    "    return (a - a.min())/(a.max() - a.min())\n",
-    "    "
+    "    return (a - a.min())/(a.max() - a.min())    "
    ]
   },
   {
@@ -125,7 +112,7 @@
     "tile_ds = sorted([p for p in products if 'T33UWP' == p.properties['title'].split('_')[5]], key=lambda p: p.properties[\"title\"].split(\"_\")[2])\n",
     "\n",
     "# Loading multiple Bands into a dataset with multiple Timestamps\n",
-    "ds = eoload.load_multiple_timestamps(products=tile_ds, bands=assets)\n",
+    "ds = eoload.load_multiple_timestamps_regex(products=tile_ds, bands=assets, **common_params)\n",
     "ds"
    ]
   },
@@ -159,14 +146,14 @@
    "outputs": [],
    "source": [
     "# Select a single Timestamp from the Dataset (both of the following methods work)\n",
-    "single_image = ds.sel(time=dt.datetime(2024, 5, 1), method='nearest')"
+    "single_img = ds.sel(time=dt.datetime(2024, 5, 1), method='nearest')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then the individual bands are extracted from the dataarray and stacked to create an array with shape (x,y,3). Note that Numpy interpretes the first array as red the second as green and the third as blue. It might be natural to stack the bands like that `[b02, b03, b04]`, but this will lead to wrong color interpretations. The Axis defines where the bands should be stacked. If the axis is not set to 2 then the output array will have the shapes (3,x,y) or (x,3,y), both of which will not be properly interpreted."
+    "Then the individual bands are extracted from the dataarray and stacked to create an dataarray with 3 color dimensions. Additionally the image is normalized, so that the image is not just nonsense. If you are curiose try to plot the image without the normalize function."
    ]
   },
   {
@@ -175,56 +162,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b02 = single_image['B02'].values #blue values\n",
-    "b03 = single_image['B03'].values #green values\n",
-    "b04 = single_image['B04'].values #red values\n",
+    "# Stack each Band into a single RGB Image\n",
+    "rgb = xr.concat([single_img['B04'], single_img['B03'], single_img['B02']], dim='band')\n",
+    "single_img['rgb'] = normalize(rgb)\n",
     "\n",
-    "rgb_raw = np.stack([b04, b03, b02], axis=2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now the image can be plotted useing ``matplotlib``. Here the aspect ratio is set to 2, as the longitude (lon) coordinates range from -180 to 180 but the latitude (lat) coordinates just from -90 to 90. Therefore 1° in lon would be similar in lenght to 2° lat."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot Image\n",
-    "fig, ax = plt.subplots(figsize=(8,8))\n",
-    "ax.imshow(rgb_raw, aspect=2)\n",
-    "ax.set_title(\"rgb raw\")\n",
-    "ax.set_axis_off()\n",
+    "# Plot the RGB image and its histogram\n",
+    "fig, axs = plt.subplots(1,2, figsize=(12,5))\n",
+    "single_img['rgb'].plot.imshow(ax=axs[0])\n",
+    "eocontrast.histogram(single_img['rgb'], xlim=(0,1), ax=axs[1])\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As you can clearly see the contrast of the image is very low, which makes it appear very dark. Therefore it is helpful to have a look at the Histograms of the image, to properly get a higher contrast."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Histogram"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plotting an Histogram\n",
-    "eocontrast.histogram(rgb_raw, nbins=6)"
    ]
   },
   {
@@ -238,6 +184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The Image still has very bad contrast and does not resemble an RGB Image.\n",
     "To fix this problem we can increase the contrast of the image. To do this we implement the functions which are stored in `eotools.contrast`. For more details on how these functions work and why we need them to increase contrast and correctly encode the data, take a look at https://www.cg.tuwien.ac.at/courses/EinfVisComp/Skriptum/SS13/EVC-11%20Point%20Operations.pdf for a great overview. In your own Code it might be helpful, if you put those functions in a Python script and import the script into your code. First we can use the `auto_clip()` or `clip()` function to set values of intensity which are outside of a boundary to the boundary border: "
    ]
   },
@@ -247,23 +194,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rgb_clipped = eocontrast.auto_clip(rgb_raw.copy(), percentile=0.05, pooled = True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can create a histogram with the clipped data:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eocontrast.histogram(rgb_clipped, nbins=6)"
+    "# Clip the RGB Image\n",
+    "clipped = eocontrast.auto_clip_dataarray(single_img['rgb'], percentile=0.05, pooled = True)\n",
+    "single_img['clipped'] = clipped\n",
+    "\n",
+    "# Plot the RGB image and its histogram\n",
+    "fig, axs = plt.subplots(1,2, figsize=(12,5))\n",
+    "single_img['clipped'].plot.imshow(ax=axs[0])\n",
+    "eocontrast.histogram(single_img['clipped'], xlim=(0,1), ax=axs[1])\n",
+    "plt.show()"
    ]
   },
   {
@@ -272,7 +211,7 @@
    "source": [
     "You can see that the histogram now has clear borders, and all the values below/above these borders have been set to the border values. You can play around clipping fewer/more values by setting the percentile value in the `auto_clip()` function. The `pooled` parameter sets if the bands get clipped individually (`=FALSE`) or as a group (`=TRUE`).\n",
     "\n",
-    "As the intensity of the values is still too low after clipping we have to stretch the values to spread between 0 and 1. We can do this by using the `stretch()` function. "
+    "As the intensity of the values is still too low after clipping we have to stretch the values to spread between 0 and 1. We can do this by using the `stretch()` function. If you have a look at the histogram you can see, that the RGB values are evenly spaced from 0 to 1."
    ]
   },
   {
@@ -281,28 +220,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rgb_clipped_stretched = eocontrast.stretch(rgb_clipped.copy(), 0, 1, pooled = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eocontrast.histogram(rgb_clipped_stretched, nbins=6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots()\n",
-    "ax.imshow(rgb_clipped_stretched)\n",
-    "ax.set_title(\"rgb clipped stretched\")\n",
-    "ax.set_axis_off()\n",
+    "# Strech the clipped RGB Image\n",
+    "stretched = eocontrast.stretch_dataarray(single_img['clipped'], 0, 1, pooled = True)\n",
+    "single_img['stretch'] = stretched\n",
+    "\n",
+    "# Plot the RGB image and its histogram\n",
+    "fig, axs = plt.subplots(1,2, figsize=(12,5))\n",
+    "single_img['stretch'].plot.imshow(ax=axs[0])\n",
+    "eocontrast.histogram(single_img['stretch'], xlim=(0,1), ax=axs[1])\n",
     "plt.show()"
    ]
   },
@@ -310,20 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If the final image doesnt look natural or still seems too dark try playing around with the percentile value or set the intensity value manually with the `clip()` function instead of `auto_clip()`. If an individual band has a higher intensity compared to the others try setting `pooled` to `=FALSE` when clipping and stretching. \n",
-    "\n",
-    "You can also use `np.log()` on the raw rgb image before clipping and stretching it to increase contrast.\n",
-    "\n",
-    "You can see what happens when we play around with the `percentile` parameter in the `auto_clip` function or use the `np.log` function below:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rgb_clipped_stretched_log = eocontrast.stretch(eocontrast.auto_clip(np.log(rgb_raw.copy()), percentile=0.05),0,1)"
+    "If the final image doesnt look natural or still seems too dark try playing around with the percentile value or set the intensity value manually with the `clip()` function instead of `auto_clip()`. If an individual band has a higher intensity compared to the others try setting `pooled` to `=FALSE` when clipping and stretching. "
    ]
   },
   {
@@ -346,34 +258,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Loading the differnt Bands for the False Color Image\n",
-    "b02 = single_image['B02'].values #blue values\n",
-    "b03 = single_image['B03'].values #green values\n",
-    "b08 = single_image['B08'].values #NIR values\n",
+    "fc = xr.concat([single_img['B08'], single_img['B03'], single_img['B02']], dim='band')\n",
+    "single_img['fc'] = eocontrast.stretch_dataarray(fc, p_min=0, p_max=1, pooled=True)\n",
     "\n",
-    "# Stacking the Bands into a numpy array, which can be interpreted as an RGB Image.\n",
-    "fc_img = np.stack([b08, b03, b02], axis=2)\n",
-    "fc_img = normalize(fc_img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots()\n",
-    "ax.imshow(fc_img)\n",
+    "fig, axs = plt.subplots(1,2, figsize=(12,5))\n",
+    "single_img['fc'].plot.imshow(ax=axs[0])\n",
+    "eocontrast.histogram(single_img['fc'], ax=axs[1])\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eocontrast.histogram(fc_img)"
    ]
   },
   {
@@ -389,19 +280,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fc_img_clipped_stretched_false = eocontrast.stretch(eocontrast.auto_clip(np.log(fc_img.copy()), pooled = False), 0, 1, pooled = False)\n",
+    "fc_stretched_false = eocontrast.stretch_dataarray(single_img['fc'], 0, 1, pooled=True)\n",
+    "single_img['fc-streched'] = fc_stretched_false\n",
     "\n",
-    "fc_img_clipped_stretched_true = eocontrast.stretch(eocontrast.auto_clip(np.log(fc_img.copy()), percentile=0.005, pooled = True), 0, 1, pooled = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eocontrast.histogram(fc_img_clipped_stretched_false)\n",
-    "eocontrast.histogram(fc_img_clipped_stretched_true)"
+    "fig, axs = plt.subplots(1,2, figsize=(12,5))\n",
+    "single_img['fc-streched'].plot.imshow(ax=axs[0])\n",
+    "eocontrast.histogram(single_img['fc-streched'], ax=axs[1])\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -424,6 +309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creat a Cloudfree Image from the median of all Timestamps\n",
     "cloudfree_img = ds.median(dim=\"time\")"
    ]
   },
@@ -433,18 +319,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b02 = cloudfree_img['B02'].values\n",
-    "b03 = cloudfree_img['B03'].values\n",
-    "b04 = cloudfree_img['B04'].values\n",
+    "# Plot the RGB image and its histogram of the cloudfree image\n",
+    "cf_rgb = xr.concat([cloudfree_img['B04'], cloudfree_img['B03'], cloudfree_img['B02']], dim='band')\n",
+    "cloudfree_img['rgb'] = normalize(cf_rgb)\n",
     "\n",
-    "cloudfree_img_raw = np.stack([b04, b03, b02], axis=2)\n",
-    "cloudfree_img = eocontrast.stretch(eocontrast.auto_clip(np.log(cloudfree_img_raw)),0,1)\n",
-    "\n",
-    "fig, ax = plt.subplots(figsize=(8,8))\n",
-    "ax.imshow(cloudfree_img)\n",
-    "ax.set_title(\"Cloudfree image\")\n",
-    "ax.set_axis_off()\n",
+    "fig, axs = plt.subplots(1,2, figsize=(12,5))\n",
+    "cloudfree_img['rgb'].plot.imshow(ax=axs[0])\n",
+    "eocontrast.histogram(cloudfree_img['rgb'], ax=axs[1])\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cf_clipped = eocontrast.auto_clip_dataarray(cloudfree_img['rgb'], percentile=0.04, pooled=True)\n",
+    "cf_stretched = eocontrast.stretch_dataarray(cf_clipped, 0, 1, pooled=True)\n",
+    "cloudfree_img['stretched'] = cf_stretched\n",
+    "\n",
+    "fig, axs = plt.subplots(1,2, figsize=(12,5))\n",
+    "cloudfree_img['stretched'].plot.imshow(ax=axs[0])\n",
+    "eocontrast.histogram(cloudfree_img['stretched'], ax=axs[1])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since this example has only two timestamps, the median image will not be very cloudfree."
    ]
   }
  ],
