--- a/notebooks/05_eodag_merging.ipynb
+++ b/notebooks/05_eodag_merging.ipynb
@@ -7,14 +7,10 @@
    "outputs": [],
    "source": [
     "#Imports\n",
-    "import os\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.image as mpimg\n",
-    "import xarray as xr\n",
     "import folium\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import datetime as dt\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "\n",
     "from eodag import EODataAccessGateway\n",
     "from eodag import setup_logging\n",
@@ -24,6 +20,7 @@
     "\n",
     "import eotools.shortcut as eoshort\n",
     "import eotools.loading as eoload\n",
+    "import eotools.contrast as eocontrast\n",
     "\n",
     "\n",
     "# Setup Verbose Values:\n",
@@ -65,7 +62,7 @@
     "workspace = eoshort.read_paths(filepath='paths.yml')\n",
     "dag = EODataAccessGateway()\n",
     "dag.set_preferred_provider(\"cop_dataspace\")\n",
-    "deserialized_search_results = eoshort.deserialize(filepath=\"search_results.geojson\", workspace=workspace, dag=dag, log=True)\n",
+    "deserialized_search_results = eoshort.deserialize(filename=\"search_results.geojson\", workspace=workspace, dag=dag, log=True)\n",
     "\n",
     "# Download multiple Products\n",
     "products = deserialized_search_results\n",
@@ -90,6 +87,7 @@
     "    data=products[:],  # SearchResult has a __geo_interface__ interface used by folium to get its GeoJSON representation, single results dont work (this [2:3] instead of [2])\n",
     "    tooltip=folium.GeoJsonTooltip(fields=[\"title\"])\n",
     ").add_to(fmap)\n",
+    "folium.Marker(location=[48.18, 16.11]).add_to(fmap)\n",
     "fmap"
    ]
   },
@@ -150,11 +148,18 @@
    "outputs": [],
    "source": [
     "# Load Data of Bands 4 and 8. The Images are from the same time, but different tiles.\n",
-    "RED_1 = products[0].get_data(band=\"B04\", **common_params)\n",
-    "RED_2 = products[1].get_data(band=\"B04\", **common_params)\n",
+    "RED_1 = eoload.get_data_regex(product=products[0], band='B04', **common_params)\n",
+    "RED_2 = eoload.get_data_regex(product=products[1], band='B04', **common_params)\n",
     "\n",
-    "NIR_1 = products[0].get_data(band=\"B08\", **common_params)\n",
-    "NIR_2 = products[1].get_data(band=\"B08\", **common_params)"
+    "NIR_1 = eoload.get_data_regex(product=products[0], band='B08', **common_params)\n",
+    "NIR_2 = eoload.get_data_regex(product=products[1], band='B08', **common_params)\n",
+    "\n",
+    "# Old method for loading data\n",
+    "# RED_1 = products[0].get_data(band=\"B04\", **common_params)\n",
+    "# RED_2 = products[1].get_data(band=\"B04\", **common_params)\n",
+    "\n",
+    "# NIR_1 = products[0].get_data(band=\"B08\", **common_params)\n",
+    "# NIR_2 = products[1].get_data(band=\"B08\", **common_params)"
    ]
   },
   {
@@ -176,7 +181,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_ndvi.plot(cmap='RdYlGn', center=False, size=6, aspect='auto')"
+    "fig, ax = plt.subplots(1, 2, figsize=(11, 4))\n",
+    "merged_ndvi.plot(cmap='RdYlGn', center=False, ax=ax[0])\n",
+    "eocontrast.histogram(merged_ndvi, title=\"NDVI Histogram\", xlim=(-1, 1), ax=ax[1])\n",
+    "plt.show()"
    ]
   }
  ],
