--- a/notebooks/06_eodag_classify.ipynb
+++ b/notebooks/06_eodag_classify.ipynb
@@ -34,6 +34,8 @@
     "from sklearn.metrics import classification_report\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "import matplotlib.colors as colors\n",
+    "from pathlib import Path\n",
+    "import cmcrameri as cmc\n",
     "\n",
     "\n",
     "# Setup Verbose Values:\n",
@@ -76,7 +78,7 @@
     "workspace = eoshort.read_paths(filepath='paths.yml')\n",
     "dag = EODataAccessGateway()\n",
     "dag.set_preferred_provider(\"cop_dataspace\")\n",
-    "deserialized_search_results = eoshort.deserialize(filepath=\"search_results.geojson\", workspace=workspace, dag=dag, log=True)"
+    "deserialized_search_results = eoshort.deserialize(filename=\"search_results.geojson\", workspace=workspace, dag=dag, log=True)"
    ]
   },
   {
@@ -105,7 +107,7 @@
    "outputs": [],
    "source": [
     "# Download Single Product\n",
-    "product = deserialized_search_results[1]\n",
+    "product = deserialized_search_results[3]\n",
     "path = dag.download(product)"
    ]
   },
@@ -116,17 +118,22 @@
    "outputs": [],
    "source": [
     "# Set Boundingbox for Area inside the Tile.\n",
-    "latmin, latmax = 48.1, 48.35\n",
-    "lonmin, lonmax = 16.1, 16.6\n",
+    "latmin, latmax = 47.86, 48.407\n",
+    "lonmin, lonmax = 16.0, 16.9\n",
     "extent = {'lonmin': lonmin, 'latmin': latmin, 'lonmax': lonmax, 'latmax': latmax}\n",
     "\n",
     "# Folium Map\n",
-    "fmap = folium.Map(location=(np.array([latmin, latmax]).mean(), np.array([lonmin, lonmax]).mean()), zoom_start=9)\n",
+    "fmap = folium.Map(location=(np.array([latmin, latmax]).mean(), np.array([lonmin, lonmax]).mean()), zoom_start=10)\n",
     "folium.Rectangle(bounds=[[latmin, lonmin],[latmax, lonmax]], color=\"red\").add_to(fmap)\n",
     "folium.GeoJson(\n",
-    "    data=deserialized_search_results[:],  # SearchResult has a __geo_interface__ interface used by folium to get its GeoJSON representation, single results dont work (this [2:3] instead of [2])\n",
+    "    data=deserialized_search_results[3:4],  # SearchResult has a __geo_interface__ interface used by folium to get its GeoJSON representation, single results dont work (this [2:3] instead of [2])\n",
     "    tooltip=folium.GeoJsonTooltip(fields=[\"title\"])\n",
     ").add_to(fmap)\n",
+    "\n",
+    "# Add Forest and Nonforest Shapefile\n",
+    "folium.GeoJson(data='../shapefiles/forest.geojson', name='forest', color='green').add_to(fmap)\n",
+    "folium.GeoJson(data='../shapefiles/nonforest.geojson', name='nonforest', color='orange').add_to(fmap)\n",
+    "\n",
     "fmap"
    ]
   },
@@ -195,7 +202,7 @@
    "outputs": [],
    "source": [
     "# Loading multiple Bands into a dataset\n",
-    "ds = eoload.load_single_product(product=product, bands=assets)\n",
+    "ds = eoload.load_single_product_regex(product=product, bands=assets, **common_params)\n",
     "ds"
    ]
   },
@@ -205,7 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "single_img = ds.sel(time=dt.datetime(2023, 4, 22), method='nearest')"
+    "single_img = ds.sel(time=dt.datetime(2024, 5, 4), method='nearest')"
    ]
   },
   {
@@ -228,8 +235,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_forest = '../data/shapefiles/forest.geojson'\n",
-    "path_nonforest = '../data/shapefiles/nonforest.geojson'"
+    "path_forest = Path.cwd().parent / 'shapefiles' / 'forest.geojson' #'../shapefiles/forest.geojson'\n",
+    "path_nonforest = Path.cwd().parent / 'shapefiles' / 'nonforest.geojson' #'../shapefiles/nonforest.geojson'"
    ]
   },
   {
@@ -268,7 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"NAIVE BAYES: \\n \",confusion_matrix(y_test, nb_predict), \"\\n\")\n"
+    "print(\"NAIVE BAYES: \\n \",confusion_matrix(y_test, nb_predict), \"\\n\")"
    ]
   },
   {
@@ -312,13 +319,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmap = colors.ListedColormap([(1, 0, 0, 0), 'g'])\n",
-    "\n",
-    "fig, ax = plt.subplots(figsize=(12,3))\n",
-    "ax.imshow(nb_predict_img, cmap=cmap)\n",
-    "ax.set_title(\"naive Bayes\")\n",
-    "ax.set_axis_off()\n",
-    "plt.show()"
+    "# Add the predicted image to the dataset\n",
+    "single_img['NB-forest'] = xr.DataArray(nb_predict_img, dims=['y', 'x'], coords={'x': single_img['x'], 'y': single_img['y']})"
    ]
   },
   {
@@ -327,19 +329,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Adding the Classification Array to the Dataset. (An already existing band gets \"copied\" and its values get overwritten; there might be better ways, but this is short)\n",
-    "ds['NB-forest'] = ds['B02']\n",
-    "ds['NB-forest'].values = np.array([nb_predict_img])\n",
-    "ds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds.sel(time=dt.datetime(2023, 4, 22), method='nearest')['NB-forest'].plot.imshow()"
+    "single_img['NB-forest'].plot.imshow(cmap='cmc.bamako_r')"
    ]
   },
   {
@@ -349,7 +339,7 @@
    "outputs": [],
    "source": [
     "# Loading the True Color Image\n",
-    "tci = eoload.load_single_product(product=product, bands=['TCI'])\n",
+    "tci = eoload.load_single_product_regex(product=product, bands=['TCI'], **common_params)\n",
     "tci = tci.sel(time=dt.datetime(2023, 4, 22), method='nearest')"
    ]
   },
@@ -360,11 +350,11 @@
    "outputs": [],
    "source": [
     "# Plotting Forest Mask on top of TCI\n",
-    "cmap = colors.ListedColormap([(1, 0, 0, 0), 'C0'])\n",
+    "cmap = colors.ListedColormap([(1, 1, 1, 0), 'C0'])\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(8,8))\n",
     "tci['TCI'].plot.imshow(ax=ax, zorder=0)\n",
-    "ds.sel(time=dt.datetime(2023, 4, 22), method='nearest')['NB-forest'].plot.imshow(ax=ax, zorder=1, cmap=cmap, alpha=1)\n",
+    "single_img['NB-forest'].plot.imshow(ax=ax, zorder=1, cmap=cmap, alpha=1, add_colorbar=False)\n",
     "plt.show()"
    ]
   },
