--- a/notebooks/07_eodag_roi.ipynb
+++ b/notebooks/07_eodag_roi.ipynb
@@ -51,10 +51,10 @@
     "workspace = eoshort.read_paths(filepath='paths.yml')\n",
     "dag = EODataAccessGateway()\n",
     "dag.set_preferred_provider(\"cop_dataspace\")\n",
-    "deserialized_search_results = eoshort.deserialize(filepath=\"search_results.geojson\", workspace=workspace, dag=dag, log=True)\n",
+    "deserialized_search_results = eoshort.deserialize(filename=\"search_results.geojson\", workspace=workspace, dag=dag, log=True)\n",
     "\n",
     "# Download Single Product\n",
-    "product = deserialized_search_results[1]\n",
+    "product = deserialized_search_results[3]\n",
     "path = dag.download(product)"
    ]
   },
@@ -65,8 +65,8 @@
    "outputs": [],
    "source": [
     "# Set Boundingbox for Area inside the Tile.\n",
-    "latmin, latmax = 48.1, 48.35\n",
-    "lonmin, lonmax = 16.1, 16.6\n",
+    "latmin, latmax = 47.86, 48.407\n",
+    "lonmin, lonmax = 16.0, 16.9\n",
     "extent = {'lonmin': lonmin, 'latmin': latmin, 'lonmax': lonmax, 'latmax': latmax}\n",
     "\n",
     "# Setting common Parameters for all further image processing\n",
@@ -83,12 +83,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# There has been some error with eodag when loading some data into an xarray\n",
-    "# There might be some processing pipelines which result in eodag grabbing the wrong file.\n",
-    "# In such a case try to use the following command to load the dataset\n",
+    "# Get List of all available assets from a product\n",
+    "bands_2_load = eoload.load_assets(path, res=10, only_spectral=True, include_tci=True)\n",
     "\n",
-    "# assets = eoload.get_assets(path, res=10)\n",
-    "# ds = eoload.load_single_product_regex(product=product, bands=assets, **common_params)\n"
+    "# Loading multiple Bands into a dataset\n",
+    "ds = eoload.load_single_product_regex(product=product, bands=bands_2_load, **common_params)\n",
+    "\n",
+    "# Selecting a single Timestamp from the Dataset\n",
+    "single_img = ds.sel(time=dt.datetime(2021, 4, 12), method='nearest')"
    ]
   },
   {
@@ -97,14 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get List of all available assets from a product\n",
-    "bands_2_load = eoload.get_assets(path, res=10, only_spectral=True, include_tci=True)\n",
-    "\n",
-    "# Loading multiple Bands into a dataset\n",
-    "ds = eoload.load_single_product(product=product, bands=bands_2_load, params=common_params)\n",
-    "\n",
-    "# Selecting a single Timestamp from the Dataset\n",
-    "single_img = ds.sel(time=dt.datetime(2021, 4, 12), method='nearest')"
+    "single_img"
    ]
   },
   {
@@ -118,8 +113,15 @@
     "%matplotlib widget \n",
     "\n",
     "# Use roi to draw polygons and export them.\n",
-    "eoregion.roi(canvas=np.transpose(single_img['TCI'].values, (1,2,0)), ds=ds, button_1='Urban', button_2='NonUrban', figsize=(12,12), savepath='../data/shapefiles')"
+    "eoregion.roi(canvas=np.transpose(single_img['TCI'].values, (1,2,0)), ds=ds, button_1='forest', button_2='nonforest', figsize=(12,12), savepath='../shapefiles')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
